# calculator

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: main.yml
include/libcalc/: calc.hpp
include/libcalc/detail/: ast.hpp  error_handler.hpp  evaluator.hpp  grammar.hpp
src/: main.cpp
src/calculator/: main.cpp
src/libcalc/: calc.cpp
src/libcalc/detail/: evaluator.cpp
tests/: main.cpp  test_libcalc_task.cpp
